deploy/home/odin-counter/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: odin-counter
          image: ticklethepanda/odin-counter:latest
          ports:
            - containerPort: 10000
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /data
              name: odin-counter-volume
            - mountPath: /tmp
              name: tmp
            - mountPath: /.cache
              name: cache
      volumes:
        - name: odin-counter-volume
          persistentVolumeClaim:
            claimName: odin-counter-pvc
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: cache
